Align correctly images and texts setting width to container and removing flex basis

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,13 @@ body {
     display: flex;
    flex-direction: column;
    height: 100vh;
+   justify-content: space-between;
 }
+.sheader,
+ .mid1,
+ .mid2 {
+    flex-grow: 1;
+ }
 
 .logo {
     font-size: 24px;
@@ -41,10 +47,8 @@ p {
     padding-top: 80px;
     padding-bottom: 80px;
     justify-content: space-between;
-    flex: 0 1 0;
-    align-items: flex-start;
-    
 
+    align-items: flex-start;
 }
 
 .sheader1 {
@@ -86,34 +90,42 @@ h3 {
 .cardholder {
     display: flex;
     justify-content: center;
-    gap: 30px;
+    gap: 50px;
     margin: 0px;
     
 }
 
 .resimage {
-    width: 130px;
+    width: 160px;
     height: auto;
     border-radius: 20%;
+    display: block;
+    margin: 0 auto;
 }
-.imagewrap {
-    display: flex;
-    flex-direction: column;
-}
+
 
 .cardholder p 
 {
     color: black;
-    height: auto;
-    
     text-align: center;
+    padding: 5px;
     
 }
 .imagewrap1,
 .imagewrap2,
 .imagewrap3,
 .imagewrap4 {
-    flex: 1;
-    
-    
+    width: 160px;   
 }
+
+.mid2 {
+    background-color: #e5e7eb;
+}
+
+.mid2 p {
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 400;
+    color: #1f2937;
+}
+ 
